--- a/app/src/main/res/layout-television/activity_updates.xml
+++ b/app/src/main/res/layout-television/activity_updates.xml
@@ -10,14 +10,14 @@
     android:weightSum="2"
     android:baselineAligned="false">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/header_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:paddingEnd="16dp"
         android:paddingStart="16dp"
-        android:layout_gravity="start">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,7 +38,6 @@
                 android:id="@+id/header_build_version"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/header_title"
                 android:textColor="?android:attr/textColorPrimary"
                 android:textSize="14sp"
                 tools:text="Android 13"/>
@@ -47,7 +46,6 @@
                 android:id="@+id/header_build_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/header_build_version"
                 android:textColor="?android:attr/textColorPrimary"
                 android:textSize="14sp"
                 tools:text="1970-01-01"/>
@@ -56,7 +54,6 @@
                 android:id="@+id/header_build_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/header_build_date"
                 android:textColor="?android:attr/textColorPrimary"
                 android:textSize="12sp" />
 
@@ -64,7 +61,6 @@
                 android:id="@+id/maintainer_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/header_build_type"
                 android:textColor="?android:attr/textColorPrimary"
                 android:textSize="12sp" />
 
@@ -72,7 +68,6 @@
                 android:id="@+id/header_last_check"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/maintainer_name"
                 android:textColor="?android:attr/textColorPrimary"
                 android:textSize="14sp"
                 tools:text="Last checked: 1970-01-01"/>
@@ -81,11 +76,10 @@
                 android:id="@+id/support_icons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/header_last_check"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:paddingTop="15dip"
-                android:paddingBottom="5dip" >
+                android:paddingTop="15dp"
+                android:paddingBottom="5dp" >
 
                 <TextView
                     android:id="@+id/header_support"
@@ -95,99 +89,91 @@
                     android:textColor="?android:attr/textColorPrimary"
                     android:textSize="12sp" />
 
-                <LinearLayout 
+                <GridLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal">
+                    android:columnCount="2"
+                    android:padding="10dp">
 
-                    <ImageView
+                    <Button
                         android:id="@+id/support_forum"
-                        android:layout_margin="2dp"
-                        android:cropToPadding="true"
-                        android:scaleType="fitXY"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:clickable="true"
-                        android:src="@drawable/ic_forum"/>
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:text="Forum"
+                        android:drawableLeft="@drawable/ic_forum"
+                        android:drawablePadding="8dp"/>
 
-                    <ImageView
+                    <Button
                         android:id="@+id/support_telegram"
-                        android:layout_margin="2dp"
-                        android:cropToPadding="true"
-                        android:scaleType="fitXY"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:clickable="true"
-                        android:src="@drawable/ic_telegram"/>
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:text="Telegram"
+                        android:drawableLeft="@drawable/ic_telegram"
+                        android:drawablePadding="8dp"/>
 
-                    <ImageView
+                    <Button
                         android:id="@+id/support_recovery"
-                        android:layout_margin="2dp"
-                        android:cropToPadding="true"
-                        android:scaleType="fitXY"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:clickable="true"
-                        android:src="@drawable/ic_recovery"/>
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:text="Recovery"
+                        android:drawableLeft="@drawable/ic_recovery"
+                        android:drawablePadding="8dp"/>
 
-                    <ImageView
+                    <Button
                         android:id="@+id/support_paypal"
-                        android:layout_margin="2dp"
-                        android:cropToPadding="true"
-                        android:scaleType="fitXY"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:clickable="true"
-                        android:src="@drawable/ic_paypal"/>
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:text="PayPal"
+                        android:drawableLeft="@drawable/ic_paypal"
+                        android:drawablePadding="8dp"/>
 
-                    <ImageView
+                    <Button
                         android:id="@+id/support_gapps"
-                        android:layout_margin="2dp"
-                        android:cropToPadding="true"
-                        android:scaleType="fitXY"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:clickable="true"
-                        android:src="@drawable/ic_gapps"/>
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:text="GApps"
+                        android:drawableLeft="@drawable/ic_gapps"
+                        android:drawablePadding="8dp"/>
 
-                    <ImageView
+                    <Button
                         android:id="@+id/support_firmware"
-                        android:layout_margin="2dp"
-                        android:cropToPadding="true"
-                        android:scaleType="fitXY"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:clickable="true"
-                        android:src="@drawable/ic_firmware"/>
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:text="Firmware"
+                        android:drawableLeft="@drawable/ic_firmware"
+                        android:drawablePadding="8dp"/>
 
-                    <ImageView
+                    <Button
                         android:id="@+id/support_modem"
-                        android:layout_margin="2dp"
-                        android:cropToPadding="true"
-                        android:scaleType="fitXY"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:clickable="true"
-                        android:src="@drawable/ic_modem"/>
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:text="Modem"
+                        android:drawableLeft="@drawable/ic_modem"
+                        android:drawablePadding="8dp"/>
 
-                    <ImageView
+                    <Button
                         android:id="@+id/support_bootloader"
-                        android:layout_margin="2dp"
-                        android:cropToPadding="true"
-                        android:scaleType="fitXY"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:clickable="true"
-                        android:src="@drawable/ic_bootloader"/>
-                </LinearLayout>
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:text="Bootloader"
+                        android:drawableLeft="@drawable/ic_bootloader"
+                        android:drawablePadding="8dp"/>
+
+                </GridLayout>
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:weightSum="2"
             android:orientation="horizontal">
 
@@ -210,15 +196,15 @@
                 style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
 
         </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:paddingEnd="16dp"
         android:paddingStart="16dp"
-        android:layout_gravity="end">
+        android:orientation="vertical">
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/no_new_updates_view"
@@ -242,16 +228,14 @@
             android:clipToPadding="false"
             android:paddingBottom="5dp"
             android:scrollbars="vertical"
-            android:layout_gravity="end"
             tools:listitem="@layout/update_item_view"/>
 
         <ProgressBar
             android:id="@+id/refresh_progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
+            android:layout_gravity="center"
             android:visibility="gone"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 </LinearLayout>
