--- a/app/src/main/res/layout/activity_updates.xml
+++ b/app/src/main/res/layout/activity_updates.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -38,78 +39,58 @@
             app:expandedTitleMarginEnd="@dimen/expanded_title_margin_end"
             app:toolbarId="@id/action_bar">
 
-            <RelativeLayout
+            <LinearLayout
                 android:id="@+id/header_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="86dp"
-                android:paddingBottom="16dp"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
+                android:orientation="vertical"
+                android:padding="16dp"
                 app:layout_collapseMode="parallax">
 
-                <TextView
-                    android:id="@+id/header_title"
-                    android:layout_width="wrap_content"
+                <!-- Header Title Section -->
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@*android:string/config_headlineFontFamily"
-                    android:paddingBottom="16dp"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:textSize="56sp"
-                    tools:text="crDroid\n20"/>
+                    android:layout_marginBottom="4dp"
+                    android:background="@drawable/rounded_gradient_header"
+                    android:padding="16dp"
+                    android:orientation="horizontal"
+                    android:gravity="center_horizontal">
 
-                <TextView
-                    android:id="@+id/header_build_version"
-                    android:layout_width="wrap_content"
+                    <TextView
+                        android:id="@+id/header_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@*android:string/config_headlineFontFamily"
+                        android:paddingBottom="16dp"
+                        android:textColor="?android:attr/textColorPrimary"
+                        android:textSize="56sp"
+                        tools:text="crDroid\n20" />
+                </LinearLayout>
+
+                <!-- Headers Recycler View Section -->
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/header_title"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:textSize="12sp"
-                    tools:text="Android 13"/>
+                    android:background="@drawable/rounded_gradient_info"
+                    android:padding="10dp">
 
-                <TextView
-                    android:id="@+id/header_build_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/header_build_version"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:textSize="12sp"
-                    tools:text="1970-01-01"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/headers_recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="8dp" />
+                </LinearLayout>
 
-                <TextView
-                    android:id="@+id/header_build_type"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/header_build_date"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/maintainer_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/header_build_type"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/header_last_check"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/maintainer_name"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:textSize="12sp"
-                    tools:text="Last checked: 1970-01-01"/>
-
-                <LinearLayout 
+                <!-- Support Icons Section -->
+                <LinearLayout
                     android:id="@+id/support_icons"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/header_last_check"
-                    android:gravity="center"
                     android:orientation="vertical"
-                    android:paddingTop="15dip"
-                    android:paddingBottom="5dip" >
+                    android:gravity="center"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="5dp">
 
                     <TextView
                         android:id="@+id/header_support"
@@ -119,102 +100,103 @@
                         android:textColor="?android:attr/textColorPrimary"
                         android:textSize="12sp" />
 
-                    <LinearLayout 
+                    <GridLayout
+                        android:id="@+id/support_buttons_grid"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="horizontal">
+                        android:columnCount="2"
+                        android:orientation="horizontal"
+                        android:padding="10dp">
 
-                        <ImageView
-                            android:id="@+id/support_forum"
-                            android:layout_margin="2dp"
-                            android:cropToPadding="true"
-                            android:scaleType="fitXY"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:clickable="true"
-                            android:src="@drawable/ic_forum"/>
-
-                        <ImageView
+                        <Button
                             android:id="@+id/support_telegram"
-                            android:layout_margin="2dp"
-                            android:cropToPadding="true"
-                            android:scaleType="fitXY"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:clickable="true"
-                            android:src="@drawable/ic_telegram"/>
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_columnWeight="1"
+                            android:text="Telegram"
+                            android:drawableLeft="@drawable/ic_telegram"
+                            android:drawablePadding="8dp"
+                            android:layout_gravity="fill"/>
 
-                        <ImageView
+                        <Button
+                            android:id="@+id/support_forum"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_columnWeight="1"
+                            android:text="Forum"
+                            android:drawableLeft="@drawable/ic_forum"
+                            android:drawablePadding="8dp"
+                            android:layout_gravity="fill"/>
+
+                        <Button
                             android:id="@+id/support_recovery"
-                            android:layout_margin="2dp"
-                            android:cropToPadding="true"
-                            android:scaleType="fitXY"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:clickable="true"
-                            android:src="@drawable/ic_recovery"/>
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_columnWeight="1"
+                            android:text="Recovery"
+                            android:drawableLeft="@drawable/ic_recovery"
+                            android:drawablePadding="8dp"
+                            android:layout_gravity="fill"/>
 
-                        <ImageView
-                            android:id="@+id/support_paypal"
-                            android:layout_margin="2dp"
-                            android:cropToPadding="true"
-                            android:scaleType="fitXY"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:clickable="true"
-                            android:src="@drawable/ic_paypal"/>
-
-                        <ImageView
+                        <Button
                             android:id="@+id/support_gapps"
-                            android:layout_margin="2dp"
-                            android:cropToPadding="true"
-                            android:scaleType="fitXY"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:clickable="true"
-                            android:src="@drawable/ic_gapps"/>
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_columnWeight="1"
+                            android:text="GApps"
+                            android:drawableLeft="@drawable/ic_gapps"
+                            android:drawablePadding="8dp"
+                            android:layout_gravity="fill"/>
 
-                        <ImageView
+                        <Button
                             android:id="@+id/support_firmware"
-                            android:layout_margin="2dp"
-                            android:cropToPadding="true"
-                            android:scaleType="fitXY"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:clickable="true"
-                            android:src="@drawable/ic_firmware"/>
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_columnWeight="1"
+                            android:text="Firmware"
+                            android:drawableLeft="@drawable/ic_firmware"
+                            android:drawablePadding="8dp"
+                            android:layout_gravity="fill"/>
 
-                        <ImageView
+                        <Button
                             android:id="@+id/support_modem"
-                            android:layout_margin="2dp"
-                            android:cropToPadding="true"
-                            android:scaleType="fitXY"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:clickable="true"
-                            android:src="@drawable/ic_modem"/>
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_columnWeight="1"
+                            android:text="Modem"
+                            android:drawableLeft="@drawable/ic_modem"
+                            android:drawablePadding="8dp"
+                            android:layout_gravity="fill"/>
 
-                        <ImageView
+                        <Button
                             android:id="@+id/support_bootloader"
-                            android:layout_margin="2dp"
-                            android:cropToPadding="true"
-                            android:scaleType="fitXY"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:clickable="true"
-                            android:src="@drawable/ic_bootloader"/>
-                    </LinearLayout>
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_columnWeight="1"
+                            android:text="Bootloader"
+                            android:drawableLeft="@drawable/ic_bootloader"
+                            android:drawablePadding="8dp"
+                            android:layout_gravity="fill"/>
+
+                        <Button
+                            android:id="@+id/support_paypal"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_columnWeight="1"
+                            android:text="PayPal"
+                            android:drawableLeft="@drawable/ic_paypal"
+                            android:drawablePadding="8dp"
+                            android:layout_gravity="fill"/>
+
+                    </GridLayout>
                 </LinearLayout>
-            </RelativeLayout>
+            </LinearLayout>
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:theme="?android:attr/actionBarTheme"
-                android:transitionName="shared_element_view"
-                app:layout_collapseMode="pin"/>
+                app:layout_collapseMode="pin" />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
