--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,4 +7,7 @@
     <color name="toolbar_collapsed">@android:color/system_neutral1_700</color>
 
     <color name="inverted">#f5f5f5</color>
+
+    <color name="gradient_start_color">#555555</color>
+    <color name="gradient_end_color">#444444</color>
 </resources>
