--- a/app/src/main/res/values/cr_strings.xml
+++ b/app/src/main/res/values/cr_strings.xml
@@ -17,15 +17,13 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <string name="blocked_update_dialog_message_custom">This update cannot be installed using the updater app. Try installing update via recovery.</string>
-
-    <string name="maintainer_name">Maintainer: <xliff:g id="maintainer" example="Maintainer Name">%1$s</xliff:g></string>
-
-    <string name="support_links">Support links:</string>
-
-    <string name="current_build_date">Current build date: <xliff:g id="build_date" example="Date">%1$s</xliff:g></string>
-
-    <string name="current_build_type">Current build type: <xliff:g id="build_type" example="Type">%1$s</xliff:g></string>
-
+    <string name="header_android_version_list">Android version</string>
+    <string name="header_last_updates_check_list">Last checked</string>
+    <string name="header_last_updates_check_exact">%1$s at %2$s</string>
+    <string name="maintainer_name">Maintainer</string>
+    <string name="support_links">Support links</string>
+    <string name="current_build_date">Current build date</string>
+    <string name="current_build_type">Current build type</string>
     <string name="build_type_unknown">Unofficial or missing OTA info</string>
 
 </resources>
